fix: letter-spacing at our services

--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ h2 {
     text-align: left;
     margin-top: -66px;
     margin-left: 80px;
+    letter-spacing: -0.1px;
 }
 
 .h3beg2{
